--- a/pages/botinfo.html
+++ b/pages/botinfo.html
@@ -34,8 +34,8 @@
 				<tr>
 					<th>Channels</th>
 				</tr>
-				<tr ng-repeat="c in bot.channels">
-					<td>{{c}}</td>
+				<tr ng-repeat="ch in bot.channels">
+					<td>{{ch}}</td>
 				</tr>
 			</thead>
 		</table>
