--- a/birch.html
+++ b/birch.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Birch</a>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#/">Birch</a>
 			</div>
 		</nav>
 	</div>
@@ -27,8 +27,9 @@
 						<p class="list-group-item-text">{{b.nick + "@" + b.server}}</p>
 					</a>
 				</div>
-				<button type="button" class="btn btn-default btn-sm glyphicon glyphicon-refresh" ng-click="status.load()"></button>
-			</div>
+				<a class="btn btn-default btn-sm glyphicon glyphicon-refresh" href="" ng-click="status.load()"></a>
+				<a href="#/connect" class="btn btn-default btn-sm glyphicon glyphicon-cloud-upload"></a>
+			</div> 
 
 			<!-- Main -->
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="main">
@@ -36,6 +37,7 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="birch-conf.js"></script>
 	<script type="text/javascript" src="birch.js"></script>
 </body>
 </html>
