--- a/pages/botinfo.html
+++ b/pages/botinfo.html
@@ -1,6 +1,11 @@
 <h1 class="page-header">Bot information</h1>
 
 <div class="row">
+	<div class="col-sm-2">
+		<button class="btn btn-default" ng-click="disconnect()">disconnect</button>
+	</div>
+</div>
+<div class="row">
 	<div class="col-md-10">
 		<table class="table">
 			<thead>
@@ -43,16 +48,16 @@
 </div>
 
 <div class="row">
-<div class="col-md-10">
-	<h3>Join</h3>
-	<form class="form-inline">
-		<div class="form-group">
-			<input type="text" class="form-control" id="channel" placeholder="#channel" ng-model="channel">
-		</div>
-		<div class="form-group">
-			<input type="password" class="form-control" id="password" placeholder="password" ng-model="password">
-		</div>
-		<button type="submit" class="btn btn-default" ng-click="join()">Join</button>
-	</form>
+	<div class="col-md-10">
+		<h3>Join</h3>
+		<form class="form-inline">
+			<div class="form-group">
+				<input type="text" class="form-control" id="channel" placeholder="#channel" ng-model="channel">
+			</div>
+			<div class="form-group">
+				<input type="password" class="form-control" id="password" placeholder="password" ng-model="password">
+			</div>
+			<button type="submit" class="btn btn-default" ng-click="join()">Join</button>
+		</form>
 	</div>
 </div>
